[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "watershed_seg"
version = "0.1.0"
description = "Automatic multi-scale segmentation of high-resolution satellite images"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-image>=0.21",
    "networkx>=3.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "jupyter>=1.0"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pyparsing.exceptions.PyparsingDeprecationWarning",
]

[tool.setuptools.packages.find]
include = ["watershed_seg*"]
